# spherex_butler_poc

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: unit_test.yaml
pipelines/: ExamplePipeline.yaml
python/spherex/cli/: resources.yaml
python/spherex/cli/cmd/: __init__.py  commands.py
python/spherex/configs/: butler.yaml  dimensions.yaml
python/spherex/configs/datastores/: fileDatastore.yaml  formatters.yaml
python/spherex/core/: __init__.py  spherex_image.py
python/spherex/formatters/: __init__.py  astropy_image.py  ccddata_image.py  spherex_image.py
python/spherex/instrument/: __init__.py  simulator_instrument.py
python/spherex/script/: __init__.py  ingestSimulated.py
python/spherex/tasks/: __init__.py  subtract.py
tests/: test_astropyFits.py  test_formatters.py  test_spherex_image.py
tests/samplePytestSession/: butler.yaml  mytest.sqlite3  pytest_session.txt
ups/: spherex_butler_poc.table
