[metadata]
name = spherex_butler_poc
description = Proof-of-concept code for using Rubin/LSST Gen3 Butler framework in SPHEREx pipelines
author = SPHEREx Science Data Center
url = https://github.com/Caltech-IPAC/spherex_butler_poc
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  astropy >=4.0
  click >= 7.0
  daf_butler @ git+https://github.com/lsst/daf_butler@master
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[options.package_data]
spherex = configs/*.yaml, configs/*/*.yaml

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
exclude = __init__.py
    lex.py
    yacc.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
# The matplotlib test may not release font files.
# Some unit tests open registry database in setUpClass.
open_files_ignore = "*.ttf" "*.sqlite3"
